Fix nav spacing

--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -35,9 +35,10 @@ header {
 
   nav {
     margin-bottom: 1em;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 8em;
     li {
-      display: inline-block;
-      margin: 0 8px;
       a {
         width: 100%;
         display: block;
